--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/vickprat/Feature-QA-Build-Portal#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "browser-sync": "^2.18.13",
+    "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.31"
   }
 }
