Create a JSX file in app directory

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-sync": "^2.18.13",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
-    "gulp-live-server": "0.0.31"
+    "gulp-live-server": "0.0.31",
+    "react": "^16.1.1"
   }
 }
