--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/vickprat/Feature-QA-Build-Portal#readme",
   "dependencies": {
     "browser-sync": "^2.18.13",
+    "browserify": "^14.5.0",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
-    "react": "^16.1.1"
+    "react": "^16.1.1",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
