--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ typings/
 # Optional npm cache directory
 .npm
 
+# Temporary directory to contain JS file from JS
+.tmp
+
 # Optional eslint cache
 .eslintcache
 
