--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^14.5.0",
     "create-react-class": "^15.6.2",
     "express": "^4.16.2",
+    "guid": "0.0.12",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
     "react": "^16.1.1",
