--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/vickprat/Feature-QA-Build-Portal#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
     "create-react-class": "^15.6.2",
@@ -24,6 +25,9 @@
     "guid": "0.0.12",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
+    "jquery": "^3.2.1",
+    "material-ui": "^0.19.4",
+    "mongoose": "^4.10.8",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "reactify": "^1.1.1",
