--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "ejs":"^2.5.7"
   }
 }
